# scretcher

./: .gitignore  README.md  flake.nix  justfile  poetry.toml  pyproject.toml
enricher/src/: process_data.py
scretcher/: scrapy.cfg
scretcher/scretcher/: items.py  middlewares.py  pipelines.py  settings.py
scretcher/scretcher/spiders/: funds_spider.py  portfolio_companies_spider.py
tests/: test_enricher.py  test_output_data.py
